--- a/app/chat/[chatroomId]/chatroom.module.css
+++ b/app/chat/[chatroomId]/chatroom.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   padding: 0 20px;
-  height: calc(100% - 50px);
+  height: 100%;
   box-sizing: border-box;
   border-radius: 3px;
 }
@@ -23,13 +23,14 @@
 .chatBox {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100% - 100px);
+  overflow-y: auto;
 }
 
 .messages {
   flex-grow: 1;
   padding: 10px;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   border-bottom: 1px solid #ddd;
   background-color: #f9f9f9;
   word-wrap: break-word;
@@ -75,7 +76,7 @@
 }
 
 .sent {
-  width: 80%;
+  max-width: 60%;
   background-color: #efefef;
   text-align: right;
   margin-left: auto;
@@ -85,7 +86,8 @@
 .received {
   margin-right: auto;
   width: 80%;
-  background-color: #f0f0f0;
+  background-color: #9c9a9a;
+  color: white;
   text-align: left;
   padding: 10px 20px;
 }
