--- a/app/chat/_styles/chatLayout.module.css
+++ b/app/chat/_styles/chatLayout.module.css
@@ -1,15 +1,15 @@
 .chatLayout {
   background-color: #f4f4f4;
   display: flex;
-  height: calc(100vh - 360px);
+  max-height: 100vh;
   padding: 20px;
   margin-top: 70px;
 }
 .chatSidebar {
   width: 30%;
-  height: calc(100vh - 400px);
+  max-height: 100vh;
 }
 .messageArea {
   width: 70%;
-  height: calc(100vh - 400px);
+  max-height: 100vh;
 }
