--- a/app/chat/_styles/chatList.module.css
+++ b/app/chat/_styles/chatList.module.css
@@ -51,16 +51,35 @@
   margin-top: 20px;
   list-style: none;
   padding: 0;
+  overflow-y: scroll;
+  overflow-y: auto;
 }
-
-.chatsPage ul li {
-  background-color: #f6f6f6;
-  margin: 5px 0;
-  padding: 5px 10px;
+.official {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 50px;
+  background-color: #333;
+  color: white;
+  padding: 5px 15px;
   border-radius: 5px;
   cursor: pointer;
 }
+.chatsPage ul li {
+  background-color: #f6f6f6;
+  height: 50px;
+  margin: 5px 0;
+  padding: 5px 15px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
+}
+
 .chatsPage ul li a {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -82,4 +101,14 @@
 
 .chatsPage button:active {
   background-color: #ecb246;
+}
+.unread {
+  width: 30px;
+  height: 30px;
+  background-color: #c97d7d;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
