--- a/app/member-center/_styles/member.module.css
+++ b/app/member-center/_styles/member.module.css
@@ -77,8 +77,23 @@
   line-height: 60px;
   color: #666;
   padding: 0 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* border-bottom: #cdc9c9 1px solid; */
   margin: auto;
+}
+.welcomeicon {
+  margin-right: 10px;
+  animation: rotate 4s infinite linear;
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 .selectArea hr {
   margin: 20px 0;
@@ -147,7 +162,6 @@
   font-weight: 400;
   border-bottom: #f87808 1px solid;
   background-color: #f1ecec;
-
 }
 .selectPart:has(li.active) {
   /* background-color: #dbedf9; */
@@ -167,14 +181,14 @@
   margin: 18px;
   width: 100%;
 }
-.memberAdmin{
+.memberAdmin {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 300px;
   margin: auto;
 }
-.memberAdmin p{
+.memberAdmin p {
   font-size: 30px;
 }
 .memberNoAdmin {
