--- a/app/friends/_styles/modal.module.css
+++ b/app/friends/_styles/modal.module.css
@@ -32,19 +32,19 @@
   margin: 50px 0;
 }
 .topsection {
+  width: 70%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   align-items: center;
-  margin-bottom: 20px;
+  margin-left: 20px;
 }
-.rightsection {
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-bottom: 20px;
+.dash {
+  width: 100%;
+  height: 5px;
+  /* padding: 0 40px; */
+  background-color: #3333338a;
 }
+
 .closeButton {
   background: none;
   border: none;
@@ -57,10 +57,22 @@
 .uername {
   font-size: 35px;
   font-weight: bold;
+  color: #333;
   margin: 10px;
   margin-bottom: 20px;
 }
-
+.icon {
+  margin-right: 20px;
+  animation: rotate 5s infinite linear;
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .userInfo {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -77,7 +89,6 @@
 .userInfo p span {
   padding: 5px;
   margin-right: 5px;
-  /* background-color: #dee5e7; */
   border-bottom: 2px solid #dee5e7;
 }
 /* button */
@@ -86,9 +97,8 @@
   justify-content: center;
 }
 .btn {
-  /* font-family: inherit; */
   font-size: 16px;
-  background: #142020;
+  background: #333;
   color: white;
   padding: 0.7em 0.9em;
   padding-left: 0.8em;
@@ -212,4 +222,11 @@
   50% {
     transform: scale3d(1.1, 1.1, 1);
   }
+}
+
+.bottomSection {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
 }
