--- a/app/articles/[articleid]/article.module.css
+++ b/app/articles/[articleid]/article.module.css
@@ -7,7 +7,7 @@
   margin-top: 40px;
   position: relative;
 }
-.loaderContainer{
+.loaderContainer {
   width: 80%;
   height: 100vh;
   display: flex;
@@ -38,7 +38,7 @@
 
 .wrapper .icon {
   position: relative;
-  background-color: #0b3760;
+  background-color: #333;
   color: #fff;
   border-radius: 50%;
   margin: 10px;
@@ -231,7 +231,7 @@
 /* 輪播 */
 
 .sliderContainer {
-  max-width: 1100px;
+  max-width: 1300px;
   margin: auto;
   border-radius: 1px;
   margin-bottom: 100px;
